aligning is fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,12 +174,6 @@ h3 {
         padding-bottom: 2.5rem;
         height: max-content;
     }
-    .rating2 {
-        margin-left: 0px;
-    }
-    .rating3 {
-        margin-left: 0px;
-    }
     article {
         margin: 10px;
     }
